src/demo1/follow_traj_wd/log/build_2025-04-06_13-13-28/follow_traj_wd/stderr.log
  File "/home/nvidia/vcii/hezi_ros2/src/demo1/follow_traj_wd/install/follow_traj_wd/lib/python3.8/site-packages/follow_traj_wd/follow_node.py", line 130
    continue
    ^
SyntaxError: 'continue' not properly in loop

  File "/home/nvidia/vcii/hezi_ros2/src/demo1/follow_traj_wd/install/follow_traj_wd/lib/python3.8/site-packages/follow_traj_wd/follow_demo_2025.py", line 228
    if current_trajectory = None:
                          ^
SyntaxError: invalid syntax

